--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 
-DATABASE_URL=postgresql://postgres:PSSNHPpxjsQFhtMvpcBieZcluOvLkAjz@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://prilogenie_db_user:xE1w4ILWjeXQ0lniVipwwcELcyrcyH40@dpg-d1ci2qp5pdvs73esn600-a/prilogenie_db
